Update links in portfolio

--- a/docs/team/Jolyn.adoc
+++ b/docs/team/Jolyn.adoc
@@ -3,6 +3,10 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :imagesDir: ../images
 :stylesDir: ../stylesheets
 
+ifdef::env-github[]
+https://cs2103aug2017-w11-b2.github.io/main/team/Jolyn.html[Please click here to view portfolio.]
+endif::[]
+
 ifndef::env-github[]
 == Project: Rolodex
 
@@ -105,14 +109,14 @@ include::../UserGuide.adoc[leveloffset=2, tag=picture]
 
 ---
 === Other contributions
-* Added auto-selection to person that is newly edited (Pull request https://github[#102])
-* Added auto-selection to person that is newly added (Pull request https://github[#123])
-* Added the removeTag method (Pull request https://github.com[#6])
-* Updated the General Documentation (Pull requests https://github.com[#2], https://github.com[#66],
-https://github.com[#112])
+* Added auto-selection to person that is newly added (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/123[#123])
+* Added auto-selection to person that is newly edited (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/102[#102])
+* Added the removeTag method (Pull request https://github.com/CS2103AUG2017-W11-B2/main/pull/6[#6])
+* Updated the General Documentation (Pull requests https://github.com/CS2103AUG2017-W11-B2/main/pull/2[#2],
+https://github.com/CS2103AUG2017-W11-B2/main/pull/66[#66],
+https://github.com/CS2103AUG2017-W11-B2/main/pull/112[#112])
 
 endif::[]
-
 
 ifndef::env-github[]
 include::../NavigationMenu.adoc[]
