--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -130,6 +130,13 @@ Returns any person having names `Betsy`, `Tim`, or `John`
 * `find Bets` +
 Returns `0 persons listed! Did you mean Betsy?`
 
+// tag::showfavourite[]
+==== Listing all favourite contacts: `showFavourite"
+
+Lists all favourite contacts. +
+Format: `showFavourite` or `sf`
+// end::showfavourite[]
+
 ==== Sorting a person : `sort`
 
 Sort the list of contacts in addressbook by name. +
@@ -188,6 +195,7 @@ Edits the phone number and email address of the 1st person to be `91234567` and 
 * `edit 2 n/Betsy Crower t/` +
 Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
 
+// tag::favourite[]
 ==== Editing a person : `favourite`
 
 Change the `favourite` status of an existing person in the address book. +
@@ -207,6 +215,7 @@ Examples:
 Changes the `favourite` status of the 1st person in the latest list.
 
 image::fav-command-ui.png[width="790"]
+// end::favourite[]
 
 ==== Adding a birthday to select person : `birthday`
 
