--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -123,7 +123,11 @@ Format: `add n/NAME p/PHONE_NUMBER e/EMAIL [e/UNIQUE EMAIL]... a/ADDRESS [t/TAG]
 
 [TIP]
 A person can have any number of tags (including 0).
+
+[TIP]
 A person must have at least 1 email.
+
+[TIP]
 ADDRESS needs to follow the format: `BLOCK, STREET, [UNIT,] POSTAL CODE` with `UNIT` being an optional parameter.
 
 Examples:
@@ -132,7 +136,7 @@ Examples:
 * `add n/Betsy Crowe t/friend e/betsycrowe@example.com a/12, Newgate Prison, IL 043 p/1234567 t/criminal`
 
 [INFO]
-v1.3 update: This feature allows the adding of more than 1 EMAIL for a person, as well as restrict the ADDRESS to the format: `BLOCK, STREET, [UNIT,] POSTAL CODE`.
+*v1.3 update:* This feature allows the adding of more than 1 EMAIL for a person, as well as restrict the ADDRESS to the format: `BLOCK, STREET, [UNIT,] POSTAL CODE`.
 
 ==== Editing a person : `edit`
 
@@ -174,7 +178,7 @@ Format: `delete INDEX [UNIQUE INDEX]...`
 ****
 
 [INFO]
-v1.1 update: This feature allows the deleting of more than 1 person.
+*v1.1 update:* This feature allows the deleting of more than 1 person.
 
 Examples:
 
