--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -378,6 +378,7 @@ _Figure 3.10: show persons result_
 
 // end::showP[]
 
+// tag::selectE[]
 === Selecting all events which a person joins : `selectE`
 
 You can use it to view all events which a certain person joins. +
@@ -403,6 +404,8 @@ You will see the following after typing `list` and `selectE 2`: +
 
 image::UG_selectEvent.png[width='790']
 _Figure 3.11: select events result_
+
+// end::selectE[]
 
 === Displaying emails of every person in an event : `displayEmails`
 
