--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -59,7 +59,7 @@ e.g. typing *`help`* and pressing kbd:[Enter] will open the help window.
 
 [NOTE]
 iConnect will be referred to as *address book* in the following documentation.
-
+// tag::help[]
 === Viewing help : `help` _[Since v1.3]_
 
 If you don't know how to use some commands, don't worry, help command can guide you.
@@ -76,7 +76,7 @@ Examples:
 Shows the usage of command `list`
 * `help add` +
 Shows the usage of command `add`
-
+// end::help[]
 === Adding a person: `add` _[Since v1.1]_
 
 _Alias:_ `create` `put`
@@ -186,7 +186,7 @@ Returns list of persons sorted by name added in ascending order
 Returns list of persons sorted by phone in ascending order
 * `sort t/DSC` +
 Returns list of persons sorted by time added in descending order
-
+// tag::delete[]
 === Deleting a person : `delete` _[Since v1.2]_
 If you want to keep your person list clean, just using delete command to remove some people to bin.
 
@@ -218,7 +218,7 @@ Deletes the 2nd and 3rd person in the address book
 * `find Betsy` +
 `delete 1` +
 Deletes the 1st person in the results of the `find` command
-
+// end::delete[]
 === Adding a tag to a person(s) : `t-add` _[Since v1.1]_
 
 Adds tag to specified person(s) from the address book.
@@ -405,7 +405,7 @@ Examples:
 Removes a single event with the index 1.
 * `s-remove 1 2 3` +
 Removes 3 events with the index 1, 2 and 3.
-
+// tag::export[]
 === Making a backup address book: `export` _[Coming in v1.4]_
 
 If you want to keep your address book clean and worry about how to get the contacts back, just export the information.
@@ -417,7 +417,7 @@ Format: `export PATH`
 ****
 * Export all the information of contacts to the given local address.
 ****
-
+// end::export[]
 === Selecting a person : `select` _[Since v1.1]_
 
 _Alias:_ `choose`
@@ -505,7 +505,7 @@ The `redo` command fails as there are no `undo` commands executed previously
 `redo` (reapplies the `delete 1` command) +
 `redo` (reapplies the `clear` command) +
 // end::undoredo[]
-
+// tag::bin[]
 === Listing all persons removed: `bin-list` _[Since v1.5]_
 
 If you are worrying about deleting people wrongly, it would be a good way to see if they are in recycle bin.
@@ -561,7 +561,7 @@ Delete the 1st and 2nd person in the bin-list
 Clears all entries in the bin.
 
 Format: `clear-bin`
-
+// end::bin[]
 === Clearing all entries : `clear`
 
 Clears all entries from the address book.
