--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -158,7 +158,7 @@ Format: `select INDEX` +
 Alias: `sel`
 
 ****
-* Selects the person and loads the Google search page the person at the specified `INDEX`.
+* Selects the person and loads the contact card of the person at the specified `INDEX`.
 * The index refers to the index number shown in the most recent listing.
 * The index *must be a positive integer* `1, 2, 3, ...`
 ****
