--- a/docs/team/taojiashu.adoc
+++ b/docs/team/taojiashu.adoc
@@ -61,3 +61,38 @@ contacts after some time. Therefore, this functionality is introduced to UniCity
 
 ==== Implementation
 
+
+
+=== Enhancement Added: Locate
+
+==== External behaviour
+
+---
+
+#Start of Extract [from: User Guide]#
+
+include::../UserGuide.adoc[tag=locate]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+Sometimes, users have no idea where the address of some people are. Thus, it will be very help to integrate Google Maps to UniCity so that users can locate their contacts' home address easily.
+
+==== Implementation
+
+
+
+=== Enhancement Proposed:
+
+
+=== Other contributions
+
+* Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
+* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
+
+== Project: PowerPointLabs
+
+{Optionally (not graded), you may include other projects in your portfolio.}
