--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -382,6 +382,23 @@ Selects the 2nd person in the address book.
 `select 1` +
 Selects the 1st person in the results of the `find` command.
 
+=== Emailing a person : `(em)email`
+
+Emails a person (identified by the index number used in the last listing) to email that person. +
+Format: `(em)email INDEX`
+
+****
+* Emails the person by opening your default mail app with the email field filled up.
+* The index refers to the index number shown in the most recent listing.
+* The index *must be a positive integer* like `1, 2, 3, ...`
+****
+
+Examples:
+
+* `list` +
+`email 2` +
+Emails the 2nd person in the address book.
+
 === Listing entered commands : `(his)history`
 
 Lists all the commands that you have entered in reverse chronological order. +
