--- a/docs/team/JiangChunhui.adoc
+++ b/docs/team/JiangChunhui.adoc
@@ -6,7 +6,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 == Project: Planno
 Planno is a desktop address book application used for managing events and persons. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-W14-B4/main/tree/master/collated/main/Adoby7.md[Functional code]] [https://github.com/CS2103AUG2017-W14-B4/main/blob/master/collated/test/Adoby7.md[Test code]] {give links to collated code files}
 
 === Enhancement: Modify Undo/Redo mechanism
 
@@ -32,6 +32,91 @@ Compare to the original design: saving whole address book for undoing, my design
 #Start of Extract [from: Developer Guide]#
 
 include::../DeveloperGuide.adoc[tag=undoredo]
+
+#End of Extract#
+
+---
+
+=== Enhancement: Edit an event
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+include::../UserGuide.adoc[tag=editE]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+Users should be able to edit an event in case there are some changes of this event
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::../DeveloperGuide.adoc[tag=]
+
+#End of Extract#
+
+---
+
+=== Enhancement: Interact events and persons
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+include::../UserGuide.adoc[tag=disjoin]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+Persons and events should interact with each other. +
+It makes no sense to create two separate lists.
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::../DeveloperGuide.adoc[tag=interaction]
+
+#End of Extract#
+
+---
+
+=== Enhancement: Attach a portrait to a person
+
+==== External behavior
+
+---
+#Start of Extract [from: User Guide]#
+
+include::../UserGuide.adoc[tag=portrait]
+
+#End of Extract#
+
+---
+
+==== Justification
+
+User can attach a portrait to the person to identify him easily
+
+==== Implementation
+
+---
+#Start of Extract [from: Developer Guide]#
+
+include::../DeveloperGuide.adoc[tag=portrait]
 
 #End of Extract#
 
