Update DeveloperGuide and User Guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -129,7 +129,7 @@ Examples:
 Edits the phone number and email address of the 1st person to be `91234567` and `johndoe@example.com` respectively.
 * `edit 2 n/Betsy Crower t/` +
 Edits the name of the 2nd person to be `Betsy Crower` and clears all existing tags.
-
+// tag::remarks[]
 === Editing a person's remark: `remark`
 
 Edits the remark of the person identified by the index number used in the last person listing. +
@@ -141,7 +141,7 @@ Examples:
 Attaches `Snores loudly` as remark to first person on the list.
 * `remark 1 r/` +
 Removes the remark for the first person.
-
+//end::remarks[]
 === Locating persons by name: `find`
 
 Finds persons whose names contain any of the given keywords. +
@@ -258,11 +258,12 @@ Sorts the list based on name in ascending order.
 * `findtag owesMoney` +
 `sort email dsc` +
 Sorts the people with `owesMoney` tag based on their emails in descending order.
+// tag::theme[]
 === Change the theme of AddressBook: `theme`
 [NOTE]
 theme feature available since v1.4.
 
-Change the theme of the Rubrika to the theme specified.
+Change the theme of Rubrika to the theme specified.
 Format: theme KEYWORD
 
 ****
@@ -273,7 +274,7 @@ Examples:
 
 * `theme` `DarkTheme` +
 Change the theme of the Rubrika to DarkTheme.
-
+//end::theme[]
 === Importing contacts: `import`
 
 [NOTE]
