--- a/docs/team/kosyoz.adoc
+++ b/docs/team/kosyoz.adoc
@@ -13,38 +13,95 @@ AddressBook - Rubrika is a desktop address book application for small and medium
 ==== External behavior
 
 ---
-#Start of Extract [from: User Guide]#
 
-include::../UserGuide.adoc[tag=R]
-
-#End of Extract#
+include::../UserGuide.adoc[tag=remarks]
 
 ---
 
 ==== Justification
 
-{Justify the need for, and the current design (i.e. external behavior) of, the feature}
+`Remark` function is needed for the user to store any information regarding the specific person. For our target audience, there is a need for the user to know his list of contacts well and these information that the user store can help him to build a closer relationship with them.
+
+`Remark` can not only store information but also act as a reminder memo for the user regarding any upcoming events with that particular contact person.
 
 ==== Implementation
 
 ---
 #Start of Extract [from: Developer Guide]#
 
-include::../DeveloperGuide.adoc[tag=undoredo]
+include::../DeveloperGuide.adoc[tag=remarks]
 
 #End of Extract#
 
 ---
 
-=== Enhancement Proposed: Add command `remark`
 
-{Explain similar to the Undo/Redo feature above.}
+=== Enhancement Added: Findtag
+
+==== External behavior
+
+---
+
+include::../UserGuide.adoc[tag=findtag]
+
+---
+
+==== Justification
+
+`findtag` function is needed for the user to list down contacts with the same tags. It is important when user only want to see a specific group of contacts.
+
+without `findtag` function the `tag` function by itself is not effective as there is no way to sort the entire contact list according to tags. Therefore the tag function will not be as useful in helping with organising the contact list.
+
+==== Implementation
+
+---
+
+include::../DeveloperGuide.adoc[tag=findtag]
+
+
+---
+
+
+=== Enhancement Added: Theme
+
+==== External behavior
+
+---
+
+include::../UserGuide.adoc[tag=theme]
+
+---
+
+==== Justification
+
+`history` function is needed for the user to look for any commands that he/she have entered earlier. When the user just added a new person into Rubrika, he/she can use the function to look for the name of the person that have just been added earlier.
+
+---
+
+=== Enhancement Proposed: Add command `history`
+
+==== External behavior
+
+---
+
+=== Listing entered commands: `history`
+
+Lists all the commands that you have entered in reverse chronological order. "+"
+Format: `history` + up and down arrows will display the previous and next input respectively in the command box.
+
+---
+
+==== Justification
+
+`theme` function is needed for the user to customize the GUI and personalize Rubrika according to the preference of the user.
+
+`theme` function allow user to choose from different themes depending on the user's current emotional status and improve their user experience.
+
 
 === Other contributions
 
-* Updated the GUI color scheme (Pull requests https://github.com[#33], https://github.com[#34])
-* Wrote additional tests to increase coverage from 88% to 92% (Pull requests https://github.com[#36], https://github.com[#38])
+* Updated the GUI color scheme (Pull requests https://github.com/CS2103AUG2017-W15-B1/Main/pull/57/commits/91f833d53d6413950e36db4e91f85d6a91419fec)
+* Integrated Google map into Rubrika (Pull requests https://github.com/CS2103AUG2017-W15-B1/Main/pull/42)
+* Use different colors for different tags inside person cards (Pull requests https://github.com/CS2103AUG2017-W15-B1/Main/pull/3)
+* Created UI mock up
 
-== Project: PowerPointLabs
-
-{Optionally (not graded), you may include other projects in your portfolio.}
