--- a/docs/AboutUs.adoc
+++ b/docs/AboutUs.adoc
@@ -12,7 +12,7 @@ We are a team based in the http://www.comp.nus.edu.sg[School of Computing, Natio
 
 === Aw Wen Hao
 image::17navasaw.png[width="150", align="left"]
-{empty}[https://github.com/17navasaw[github]] [<<johndoe#, portfolio>>]
+{empty}[https://github.com/17navasaw[github]] [<<awwenhao#, portfolio>>]
 
 Role: Developer Guide + Integration
 
