--- a/docs/team/Adeebashraf.adoc
+++ b/docs/team/Adeebashraf.adoc
@@ -8,7 +8,15 @@ DeathNote is a desktop address book application used for teaching Software Engin
 
 *Code contributed*: [https://github.com/CS2103AUG2017-W10-B3/DeathNote/tree/master/src/main[Functional code]] [https://github.com/CS2103AUG2017-W10-B3/DeathNote/tree/master/src/test[Test code]]
 
-=== Enhancement Added: Added Birthday and Remarks Parameters
+=== Enhancement Added:  Added Birthday and Remarks Parameters
+
+image::../images/personCard.png[]
+
+Person Card shows birthday and remarks +
+
+=== Enhancement Added: added Remark Command
+
+Allows the adding of remarks using the `remark ` command. +
 
 ==== External behavior
 
@@ -17,13 +25,14 @@ DeathNote is a desktop address book application used for teaching Software Engin
 
 include::../UserGuide.adoc[tag=bday] +
 
-inclyde::../UserGuide.adoc[tag=remark] +
+include::../UserGuide.adoc[tag=remark] +
 
 #End of Extract#
 
----
 
 ==== Justification
+
+---
 
 This feature allows users to further personalize each contact with more parameters +
 
@@ -35,3 +44,21 @@ This feature allows users to further personalize each contact with more paramete
 #End of Extract#
 
 ---
+
+=== Enhancement Added: Birthday Reminder Window
+Allows a quick and easy view of contacts's corresponding birthdays. +
+
+image::../images/birthdayalarmwindow.JPG[]
+
+==== External Behaviour
+---
+#Start of Extract https://github.com/CS2103AUG2017-W10-B3/DeathNote/blob/master/docs/UserGuide.adoc[from: User Guide]#
+
+include::../UserGuide.adoc[tag=brem]
+
+#End of Extract#
+
+==== Justification
+
+---
+This features lets users see birthdays for all the contacts at once glance.
